Fixed modals and overlay issues at phone resolutions

--- a/themes/amg-orangify/index.html
+++ b/themes/amg-orangify/index.html
@@ -41,6 +41,8 @@
 			</div>
 		</div>
 
+	{% if is_front_page %}	
+
 		<div id="skills" class="container-fluid amg-area amg-skills">
 			<h1>My Skills</h1>
 			<div class="row amg-badge-collection">
@@ -123,6 +125,8 @@
 		</div>
 
 		{% include "partials/social.html" %}
+
+	{% endif %}
 
 	</section>
 	<!-- End Content -->
